--- a/includes/profile.html
+++ b/includes/profile.html
@@ -7,7 +7,7 @@
 @License: maDezynIzM.E. 2016
 -->
 
-<div class="md_container md_full_size md_float_mid page" id="profile_page">
+<div class="flex_container floating_page" id="profile_page">
     <div class="md_col_container column" id="left_side">
         <div class="md_container left_section">
             <img src="imgs/app/user.svg" alt="#" id="profile_img" />
@@ -29,7 +29,7 @@
         <div class="md_col_container left_section" id="actions">
             <button type="button" name="edit">Edit profile</button>
             <button type="button" name="settings">Settings</button>
-            <button type="button" name="sign_out" id="sign_out_btn">Sign-out</button>
+            <button type="button" name="sign_out_btn" id="sign_out_btn">Sign-out</button>
         </div>
     </div>
     <div class="md_col_container column" id="right_side">
