--- a/includes/profile.html
+++ b/includes/profile.html
@@ -33,27 +33,35 @@
         </div>
     </div>
     <div class="md_col_container column" id="right_side">
-        <div class="md_col_container" id="about">
-            <p id="profile_fname">
-                First name:
-            </p>
-            <p id="profile_lname">
-                Last name:
-            </p>
-            <p id="profile_age">
-                Age:
-            </p>
-            <p id="profile_sex">
-                Sex:
-            </p>
-            <p id="profile_pref">
-                Sexual preference:
-            </p>
-            <p id="profile_location">
-                Location:
-            </p>
+        <div class="md_col_container">
+          <h1 class="card_title">Login</h1>
+          <div class="md_input_wrapper">
+              <p>First name:</p>
+              <input type="text" name="uname" id="uname" required>
+          </div>
+          <div class="md_input_wrapper">
+              <p>Last name:</p>
+              <input type="text" name="password" id="password" maxlength="10" required>
+          </div>
+          <div class="md_input_wrapper">
+              <p>Age:</p>
+              <input type="text" name="password" id="password" maxlength="10" required>
+          </div>
+          <div class="md_input_wrapper">
+              <p>Sex:</p>
+              <input type="text" name="password" id="password" maxlength="10" required>
+          </div>
+          <div class="md_input_wrapper">
+              <p>Sexual pref:</p>
+              <input type="text" name="password" id="password" maxlength="10" required>
+          </div>
+          <div class="md_input_wrapper">
+              <p>Location:</p>
+              <input type="text" name="password" id="password" maxlength="10" required>
+          </div>
         </div>
         <div class="md_container" id="conn_img_gallery">
+          <!-- some shit -->
         </div>
     </div>
 </div>
