--- a/includes/profile.html
+++ b/includes/profile.html
@@ -7,60 +7,23 @@
 @License: maDezynIzM.E. 2016
 -->
 
-<div class="flex_container floating_page" id="profile_page">
-    <div class="md_col_container column" id="left_side">
-        <div class="md_container left_section">
+<div class="flex_container" id="profile_page">
+    <div class="flex_col_container" id="left_side">
+        <div class="flex_container left_section">
             <img src="imgs/app/user.svg" alt="#" id="profile_img" />
-            <p>
-            </p>
-            <p> </p>
         </div>
-        <div class="md_col_container left_section" id="stats">
-            <p>
-                Lorem ipsum dolor sit ame
-            </p>
-            <p>
-                Lorem ipsum dolor sit ame
-            </p>
-            <p>
-                Lorem ipsum dolor sit ame
-            </p>
+        <div class="flex_col_container left_section" id="stats">
         </div>
-        <div class="md_col_container left_section" id="actions">
+        <div class="flex_col_container left_section" id="actions">
             <button type="button" name="edit">Edit profile</button>
             <button type="button" name="settings">Settings</button>
             <button type="button" name="sign_out_btn" id="sign_out_btn">Sign-out</button>
         </div>
     </div>
-    <div class="md_col_container column" id="right_side">
-        <div class="md_col_container">
-          <h1 class="card_title">Login</h1>
-          <div class="md_input_wrapper">
-              <p>First name:</p>
-              <input type="text" name="uname" id="uname" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>Last name:</p>
-              <input type="text" name="password" id="password" maxlength="10" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>Age:</p>
-              <input type="text" name="password" id="password" maxlength="10" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>Sex:</p>
-              <input type="text" name="password" id="password" maxlength="10" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>Sexual pref:</p>
-              <input type="text" name="password" id="password" maxlength="10" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>Location:</p>
-              <input type="text" name="password" id="password" maxlength="10" required>
-          </div>
-        </div>
-        <div class="md_container" id="conn_img_gallery">
+    <div class="flex_col_container" id="right_side">
+        <div class="flex_col_container" id="user_info"></div>
+
+        <div class="flex_col_container" id="conn_img_gallery">
           <!-- some shit -->
         </div>
     </div>
