--- a/includes/userAccess.html
+++ b/includes/userAccess.html
@@ -24,7 +24,7 @@
         <div class="md_input_wrapper">
             <input type="button" name="submit_login" id="submit_login" value="Sign-in">
         </div>
-        <div class="md_options md_container">
+        <div class="md_options flex_container">
             <a id="sign_up_btn">uhm...I dont have an account!</a>
             <a>haha..I forgot my password!</a>
         </div>
@@ -62,7 +62,7 @@
         <div class="md_input_wrapper">
             <input type="button" name="submit_reg" id="submit_reg" value="Sign-up">
         </div>
-        <div class="md_options md_container">
+        <div class="md_options flex_container">
             <a id="sign_in_btn">uhm...I have an account!</a>
         </div>
     </form>
