--- a/includes/profile.html
+++ b/includes/profile.html
@@ -8,23 +8,23 @@
 -->
 
 <div class="flex_container" id="profile_page">
-    <div class="flex_col_container" id="left_side">
-        <div class="flex_container left_section">
-            <img src="imgs/app/user.svg" alt="#" id="profile_img" />
-        </div>
-        <div class="flex_col_container left_section" id="stats">
-        </div>
-        <div class="flex_col_container left_section" id="actions">
-            <button type="button" name="edit">Edit profile</button>
-            <button type="button" name="settings">Settings</button>
-            <button type="button" name="sign_out_btn" id="sign_out_btn">Sign-out</button>
-        </div>
+  <div class="flex_col_container">
+    <div class="flex_container left_section">
+      <img src="imgs/app/user.svg" alt="#" id="profile_img" />
     </div>
-    <div class="flex_col_container" id="right_side">
-        <div class="flex_col_container" id="user_info"></div>
+    <div class="flex_col_container left_section" id="stats">
+    </div>
+    <div class="flex_col_container left_section" id="actions">
+      <button type="button" name="edit">Edit profile</button>
+      <button type="button" name="settings">Settings</button>
+      <button type="button" name="sign_out_btn" id="sign_out_btn">Sign-out</button>
+    </div>
+  </div>
+  <div class="flex_col_container">
+    <div class="flex_col_container" id="user_info"></div>
 
-        <div class="flex_col_container" id="conn_img_gallery">
-          <!-- some shit -->
-        </div>
+    <div class="flex_col_container" id="conn_img_gallery">
+      <!-- some shit -->
     </div>
+  </div>
 </div>
