UI update 1: structure and flow

--- a/includes/profile.html
+++ b/includes/profile.html
@@ -8,11 +8,14 @@
 -->
 
 <div class="flex_container" id="profile_page">
-  <div class="flex_col_container">
+  <div class="flex_container">
     <div class="flex_container left_section">
       <img src="imgs/app/user.svg" alt="#" id="profile_img" />
     </div>
     <div class="flex_col_container left_section" id="stats">
+      <p>jkhfdjg</p>
+      <p>jkhfdjg</p>
+      <p>jkhfdjg</p>
     </div>
     <div class="flex_col_container left_section" id="actions">
       <button type="button" name="edit">Edit profile</button>
