--- a/includes/userAccess.html
+++ b/includes/userAccess.html
@@ -7,68 +7,40 @@
 @License: maDezynIzM.E. 2016
 -->
 
-<div class="flex_container floating_page" id="access_page">
-    <!--
-        login form
-    -->
+<div class="flex_container" id="app_access">
     <div class="right_col col">
-       <img src="imgs/app/bg.png" alt="logo">
-    </div>
-    <div class="left_col col">
-      <form class="card" method="POST" id="sign_in_form">
-          <h1 class="card_title">Login</h1>
-          <div class="md_input_wrapper">
-              <p>Username/E-mail:</p>
-              <input type="text" name="uname" id="uname" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>Password:</p>
-              <input type="text" name="password" id="password" maxlength="10" required>
-          </div>
-          <div class="md_input_wrapper">
-              <input type="button" name="submit_login" id="submit_login" value="Sign-in">
-          </div>
-          <div class="md_options flex_container">
-              <a id="sign_up_btn">uhm...I dont have an account!</a>
-              <a>haha..I forgot my password!</a>
-          </div>
-          <p id="response">blah blah blah</p>
-      </form>
-          <!--
-  			registration form
-  		-->
-      <form class="card" method="POST" id="sign_up_form">
-          <h1 class="card_title">Register</h1>
-          <div class="md_input_wrapper">
-              <p>Username:</p>
-              <input type="text" name="new_uname" id="new_uname" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>First name:</p>
-              <input type="text" name="fname" id="fname" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>Last name:</p>
-              <input type="text" name="lname" id="lname" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>E-mail:</p>
-              <input type="email" name="email" id="email" placeholder="example@here.com" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>Password:</p>
-              <input type="text" name="password1" id="password1" maxlength="10" required>
-          </div>
-          <div class="md_input_wrapper">
-              <p>Re-enter password:</p>
-              <input type="text" name="password2" id="password2" maxlength="10" required>
-          </div>
-          <div class="md_input_wrapper">
-              <input type="button" name="submit_reg" id="submit_reg" value="Sign-up">
-          </div>
-          <div class="md_options flex_container">
-              <a id="sign_in_btn">uhm...I have an account!</a>
+        <!-- LOGIN FORM -->
+      <form class="flex_col_container" method="POST" id="sign_in_form" autocomplete="off">
+          <h1>Login</h1>
+          <label for="uname">Username/E-mail:</label>
+          <input type="text" name="uname" id="uname" required>
+          <label for="password">Password:</label>
+          <input type="text" name="password" id="password" maxlength="10" required>
+          <input type="button" name="submit_login" id="submit_login" value="Sign-in">
+          <div class="flex_container actions">
+              <a id="sign_up_btn" class="other_actions">Sign-up</a>
+              <a class="other_actions">forgot password?</a>
           </div>
       </form>
+        <!-- REGISTRATION FORM -->
+        <form class="flex_col_container" method="POST" id="sign_up_form" autocomplete="off">
+            <h1>Register</h1>
+            <label for="new_uname">Username:</label>
+            <input type="text" name="new_uname" id="new_uname" required>
+            <label for="fname">First name:</label>
+            <input type="text" name="fname" id="fname" required>
+            <label for="lname">Last name:</label>
+            <input type="text" name="lname" id="lname" required>
+            <label for="email">E-mail:</label>
+            <input type="email" name="email" id="email" placeholder="example@here.com" required>
+            <label for="password1">Password:</label>
+            <input type="text" name="password1" id="password1" maxlength="10" required>
+            <label for="password2">Re-enter password:</label>
+            <input type="text" name="password2" id="password2" maxlength="10" required>
+            <input type="button" name="submit_reg" id="submit_reg" value="Sign-up">
+            <div class="flex_container actions">
+                <a id="sign_in_btn" class="other_actions">Sign-in</a>
+            </div>
+        </form>
     </div>
 </div>
