--- a/css/style.css
+++ b/css/style.css
@@ -1,96 +1,152 @@
-html, body {height: 100%; width: 100%; max-height: 100%;}
-body {background-color: red;}
+html, body {height: 100%; width: 100%;}
+html {
+    background: url("../imgs/app/bg.jpg") no-repeat center fixed;
+    background-size: cover;
+}
 * {margin: auto;}
 header, #main_content, footer {width: 100%;}
-header {min-height: 10%; background-color: rgba(0,0,0,0.5); top: 0;}
+header {min-height: 10%; background-color: rgba(0,0,0,0.5);}
 #main_content {
-	min-height: 70%;
-	max-height: 70%;
+	min-height: 60%;
 	background-color: rgba(0, 0, 0, 0.5);
+	padding: 5% 0;
 }
 
 footer {
-	position: fixed;
 	min-height: 20%;
 	background-color: rgba(0,0,0,0.8);
-	bottom: 0;
 }
-
 footer h1 {color: white;}
 
-/* general styles */
-.left_side {
-	flex: 2;
-	background-color: rgba(0, 255, 0, 0.5);
+/*
+** GLOBAL STYLES
+*/
+.show_elem {display: flex;}
+.hide_elem {display: none;}
+/*div {margin: 5% auto;}*/
+.flex_container, .flex_col_container {
+	display: flex;
+	display: -moz-flex;
+	display: -webkit-flex;
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+}
+.flex_col_container {flex-direction: column;}
+
+/*
+** NAVIGATION BAR
+*/
+nav {height: 100%;}
+
+/* MODEL DIALOG */
+.modal_container {background-color: rgba(0, 0, 0, 0.5);}
+a:hover {cursor: pointer;}
+form {
+	padding: 5%;
+	color: white;
+	border-radius: 6px;
+	border: 1px solid transparent;
+}
+form h1 {text-align: center; margin: 15px 0;}
+form a {font-size: small; margin: auto;}
+input {
+    width: 60%;
+    margin: 8px auto;
+    color: white;
+    border-radius: 4px;
+	padding: 12px 20px;
 }
 
-.right_side {
-	flex: 1;
-	background-color: rgba(0, 255, 0, 0.5);
+input[type=text], input[type=email], select {
+	border: 1px solid #ccc;
+	box-sizing: border-box;
+	background-color: transparent;
 }
 
-/* access page */
-#access_page {
-	/*display: none;*/
+input[type=button] {
+	background-color: #4CAF50;
+	border: none;
+	cursor: pointer;
+}
+input[type=button]:hover {background-color: #45a049;}
+label, .actions {width: 60%;}
+
+/*
+** STYLES FOR 'app_access'
+*/
+#app_access {
 	position: fixed;
-	/*display: none;*/
 	height: 100%;
 	width: 100%;
-	background-color: rgba(255, 150, 0, 1);
+	display: none;
+}
+#app_access form {background-color: transparent;}
+#app_access .col {
+	background-color: rgba(0, 0, 0, 0.5);
+	width: 60%;
+	max-width: 600px;
+	border-radius: 8px;
 }
 
-#access_page form {background-color: rgba(0, 0, 0, 0.5);}
-
+/*
+	ALL STYLES FOR 'app_interface'
+*/
+#app_interface {width: 100%; height: 100%; display: none;}
 #browser_page {
 	height: 100%;
 	max-height: 100%;
 	width: 100%;
 	overflow-y: auto;
 }
-
-#profiles {
-	height: 80%;
-	/*max-height: 80%;*/
-	width: 100%;
-}
-
+#profiles {height: 80%; width: 100%;}
 #profiles div {
 	width: 400px;
 	height: 400px;
 	background-color: red;
 }
-
 .floating_page {
 	width: 80%;
 	height: 80%;
 	z-index: 5;
 }
-
 #navigation_bar {
-	z-index: 1;
 	jusitfy-content: space-between;
 	-moz-justify-content: space-between;
 	-webkit-justify-content: space-between;
 }
 
-.flex_container, .flex_col_container {
-	display: flex;
-	display: -moz-flex;
-	display: -webkit-flex;
-	flex-wrap: wrap;
-	-moz-flex-wrap: wrap;
-	-webkit-flex-wrap: wrap;
+/*
+** PROFILE CARDS
+*/
+.card {
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+	margin: 2%;
+}
+.card:hover {box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);}
+.container {padding: 2px 16px;}
+
+/*
+** LOADER
+*/
+#loader_container {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	background-color: rgba(255,255,255,0.5);
+}
+#loader {
+	border: 16px solid #992030;
+	border-top: 16px solid rgba(0,0,0,0.5);
+	border-radius: 50%;
+	max-width: 150px;
+	width: 120px;
+	height: 120px;
+	animation: spin 2s linear infinite;
 }
 
-.flex_col_container {
-	flex-direction: column;
-}
-
-.col {
-
-}
-
-/* modal dialog with background cover */
-.modal_container {
-	background-color: rgba(0, 0, 0, 0.5);
+@keyframes spin {
+	0% {transform: rotate(0deg);}
+	100% {transform: rotate(360deg);}
 }
