UI update 2: layout

--- a/includes/profile.html
+++ b/includes/profile.html
@@ -8,26 +8,35 @@
 -->
 
 <div class="flex_container" id="profile_page">
-  <div class="flex_container">
-    <div class="flex_container left_section">
+  <div class="flex_col_container">
+    <div class="flex_container">
       <img src="imgs/app/user.svg" alt="#" id="profile_img" />
     </div>
-    <div class="flex_col_container left_section" id="stats">
+    <hr>
+    <div class="flex_col_container" id="stats">
       <p>jkhfdjg</p>
       <p>jkhfdjg</p>
       <p>jkhfdjg</p>
     </div>
-    <div class="flex_col_container left_section" id="actions">
+    <div class="flex_col_container" id="actions">
       <button type="button" name="edit">Edit profile</button>
       <button type="button" name="settings">Settings</button>
       <button type="button" name="sign_out_btn" id="sign_out_btn">Sign-out</button>
     </div>
   </div>
   <div class="flex_col_container">
-    <div class="flex_col_container" id="user_info"></div>
-
+    <div class="flex_col_container" id="user_info">
+      <p>szdfasdf</p>
+      <p>szdfasdf</p>
+      <p>szdfasdf</p>
+      <p>szdfasdf</p>
+    </div>
     <div class="flex_col_container" id="conn_img_gallery">
       <!-- some shit -->
+      <p>szdfasdf</p>
+      <p>szdfasdf</p>
+      <p>szdfasdf</p>
+      <p>szdfasdf</p>
     </div>
   </div>
 </div>
