--- a/includes/userAccess.html
+++ b/includes/userAccess.html
@@ -13,7 +13,7 @@
       <form class="flex_col_container" method="POST" id="sign_in_form" autocomplete="off">
           <h1>Login</h1>
           <label for="uname">Username/E-mail:</label>
-          <input type="text" name="uname" id="uname" required>
+          <input type="text" name="uname" id="uname" required autofocus>
           <label for="password">Password:</label>
           <input type="text" name="password" id="password" maxlength="10" required>
           <input type="button" name="submit_login" id="submit_login" value="Sign-in">
@@ -26,7 +26,7 @@
         <form class="flex_col_container" method="POST" id="sign_up_form" autocomplete="off">
             <h1>Register</h1>
             <label for="new_uname">Username:</label>
-            <input type="text" name="new_uname" id="new_uname" required>
+            <input type="text" name="new_uname" id="new_uname" required autofocus>
             <label for="fname">First name:</label>
             <input type="text" name="fname" id="fname" required>
             <label for="lname">Last name:</label>
