--- a/css/style.css
+++ b/css/style.css
@@ -5,24 +5,29 @@ html {
 }
 * {margin: auto;}
 header, #main_content, footer {width: 100%;}
-header {min-height: 10%; background-color: rgba(0,0,0,0.5);}
+header {
+	position: fixed;
+	top: 0;
+	z-index: 1;
+	height: 10vw;
+	background-color: rgba(0,0,0,0.7);
+}
 #main_content {
-	min-height: 60%;
-	background-color: rgba(0, 0, 0, 0.5);
-	padding: 5% 0;
+	min-height: 100%;
+	height: auto;
+	background-color: rgba(0, 0, 0, 0.2);
+	/*padding: 5% 0;*/
 }
 
 footer {
-	min-height: 20%;
+	color: white;
+	height: 20%;
 	background-color: rgba(0,0,0,0.8);
 }
-footer h1 {color: white;}
 
 /*
 ** GLOBAL STYLES
 */
-.show_elem {display: flex;}
-.hide_elem {display: none;}
 /*div {margin: 5% auto;}*/
 .flex_container, .flex_col_container {
 	display: flex;
@@ -36,10 +41,23 @@ footer h1 {color: white;}
 /*
 ** NAVIGATION BAR
 */
-nav {height: 100%;}
+#logo, #nav_container {width: auto; height: 100%; max-height: 100%;}
+#logo {align-self: flex-start; margin-left: 2%;}
+#nav_container {align-self: flex-end;  margin-right: 2%; min-width: 200px;}
+#logo_img {border-radius: 50%; max-height: 95%;}
+#logo_text {color: white;}
+.nav_btn {
+	width: 150px;
+	min-height: 100%;
+	background-color: rgba(0,0,0,0.5);
+	transition: all 1s;
+}
+.nav_btn:hover {background-color: rgba(255,122,255,0.5);}
 
-/* MODEL DIALOG */
-.modal_container {background-color: rgba(0, 0, 0, 0.5);}
+/*
+** MODEL DIALOG
+*/
+.modal_container {background-color: rgba(0,0,0,0.5);}
 a:hover {cursor: pointer;}
 form {
 	padding: 5%;
@@ -89,35 +107,31 @@ label, .actions {width: 60%;}
 }
 
 /*
-	ALL STYLES FOR 'app_interface'
+	ALL STYLES FOR 'app_ui'
 */
-#app_interface {width: 100%; height: 100%; display: none;}
+#app_ui {
+	width: 100%;
+	height: 100%;
+	display: none;
+	/*-webkit-animation: fadePage 1s;
+	animation: fadePage 1s;*/
+}
 #browser_page {
 	height: 100%;
 	max-height: 100%;
 	width: 100%;
 	overflow-y: auto;
 }
-#profiles {height: 80%; width: 100%;}
-#profiles div {
-	width: 400px;
-	height: 400px;
-	background-color: red;
-}
 .floating_page {
 	width: 80%;
 	height: 80%;
 	z-index: 5;
 }
-#navigation_bar {
-	jusitfy-content: space-between;
-	-moz-justify-content: space-between;
-	-webkit-justify-content: space-between;
-}
 
 /*
-** PROFILE CARDS
+** MINI PROFILE STYLES
 */
+#profiles {min-height: 100%; height: auto; width: 100%;}
 .card {
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	transition: 0.3s;
@@ -129,13 +143,14 @@ label, .actions {width: 60%;}
 /*
 ** LOADER
 */
-#loader_container {
+#app_loader_cont {
 	position: fixed;
 	width: 100%;
 	height: 100%;
 	z-index: 1;
 	background-color: rgba(255,255,255,0.5);
 }
+
 #loader {
 	border: 16px solid #992030;
 	border-top: 16px solid rgba(0,0,0,0.5);
@@ -146,7 +161,14 @@ label, .actions {width: 60%;}
 	animation: spin 2s linear infinite;
 }
 
+/*
+** ANIMATIONS AND TRANSITIONS
+*/
 @keyframes spin {
 	0% {transform: rotate(0deg);}
 	100% {transform: rotate(360deg);}
+}
+@keyframes fadePage {
+	from {opacity: 0;}
+	to {opacity: 1;}
 }
