--- a/includes/profile.html
+++ b/includes/profile.html
@@ -7,36 +7,63 @@
 @License: maDezynIzM.E. 2016
 -->
 
-<div class="flex_container" id="profile_page">
-  <div class="flex_col_container">
-    <div class="flex_container">
-      <img src="imgs/app/user.svg" alt="#" id="profile_img" />
+<div class="flex_container profile_view" id="profile_page">
+    <div class="flex_col_container col">
+        <div class="flex_container padding_long card">
+            <img src="imgs/app/avt.svg" alt="#" id="profile_img" class="circle"/>
+            <div class="flex_col_container">
+                <h3> sweet-cheeks </h3>
+                <br>
+                <p>Likes: <span class="profile_likes"> 19 </span></p>
+                <p>Matches: <span class="profile_matches"> 9 </span></p>
+                <p>Rating: <span class="profile_rating"> 7/10 </span></p>
+            </div>
+        </div>
+
+        <br>
+        <div class="flex_container card profile_gallery" id="conn_img_gallery">
+            <!-- some shit -->
+            <img src="imgs/app/avt.svg">
+            <img src="imgs/app/avt.svg">
+            <img src="imgs/app/avt.svg">
+            <img src="imgs/app/avt.svg">
+        </div>
     </div>
-    <hr>
-    <div class="flex_col_container" id="stats">
-      <p>jkhfdjg</p>
-      <p>jkhfdjg</p>
-      <p>jkhfdjg</p>
+
+    <div class="flex_col_container col">
+        <div class="flex_col_container padding_16 card" id="user_info">
+            <fieldset>
+                <legend>User information</legend>
+                <form>
+                    <label for="profile_uname">First-name : </label>
+                    <input class="info_first_name" type="text" value="Sandra" id="profile_uname" disabled>
+                    <br>
+                    <label for="profile_lname">Last-name : </label>
+                    <input class="info_last_name" type="text" value="Brooks" id="profile_lname" disabled>
+                    <br>
+                    <label for="profile_email">E-mail : </label>
+                    <input class="info_email" type="text" value="sbrooks@mail.com" id="profile_email" disabled>
+                    <br>
+                    <label for="profile_gender">Gender : </label>
+                    <input class="info_gender" type="text" value="Male" id="profile_gender" disabled>
+                    <br>
+                    <label for="profile_sex_pref">I prefer : </label>
+                    <input class="info_sex_pref" type="text" value="Men, Women" id="profile_sex_pref" disabled>
+                    <br>
+                    <label for="profile_bio">About me : </label>
+                    <input class="info_bio" type="text"
+                           value="I value life, and believe that love is a choice" id="profile_bio" disabled>
+                </form>
+            </fieldset>
+        </div>
+
+        <br>
+        <div class="flex_container padding_16 card" id="stats">
+            <div class="flex_col_container half_width" id="actions">
+                <button type="button" name="edit">Edit profile</button>
+                <button type="button" name="settings">Settings</button>
+                <button type="button" name="sign_out_btn" id="sign_out_btn">Sign-out</button>
+            </div>
+        </div>
     </div>
-    <div class="flex_col_container" id="actions">
-      <button type="button" name="edit">Edit profile</button>
-      <button type="button" name="settings">Settings</button>
-      <button type="button" name="sign_out_btn" id="sign_out_btn">Sign-out</button>
-    </div>
-  </div>
-  <div class="flex_col_container">
-    <div class="flex_col_container" id="user_info">
-      <p>szdfasdf</p>
-      <p>szdfasdf</p>
-      <p>szdfasdf</p>
-      <p>szdfasdf</p>
-    </div>
-    <div class="flex_col_container" id="conn_img_gallery">
-      <!-- some shit -->
-      <p>szdfasdf</p>
-      <p>szdfasdf</p>
-      <p>szdfasdf</p>
-      <p>szdfasdf</p>
-    </div>
-  </div>
 </div>
