--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,38 @@
-html, body {height: 100%; width: 100%;}
+html, body {height: 100%; width: 100%;overflow: hidden;}
 html {
     background: url("../imgs/app/bg.jpg") no-repeat center fixed;
     background-size: cover;
 }
 * {margin: auto;}
+.theme_button {color: #992030;background: none;border-bottom: 3px solid transparent;}
+.theme_button:hover {cursor: pointer; border-bottom: 3px solid #992030;}
+.padding_long {padding: 24px 8px;}
+.padding_16 {padding: 16px;}
+.padding_8 {padding: 9px;}
+.center {margin: auto;}
+.circle {border-radius: 50%;}
+.half_width {flex: 1;}
+.full_width {width: 100%;}
 header, #main_content, footer {width: 100%;}
 header {
 	position: fixed;
 	top: 0;
+	height: 64px;
 	z-index: 1;
-	height: 10vw;
-	background-color: rgba(0,0,0,0.7);
+	/*height: 10vw;*/
+	background-color: rgb(66, 0, 0);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 #main_content {
-	min-height: 100%;
-	height: auto;
-	background-color: rgba(0, 0, 0, 0.2);
+	min-height: 93%;
+	overflow: auto;
+	background-color: rgba(0,0,0,0.2);
 	/*padding: 5% 0;*/
 }
 
 footer {
 	color: white;
-	height: 20%;
+	height: 7%;
 	background-color: rgba(0,0,0,0.8);
 }
 
@@ -43,16 +54,29 @@ footer {
 */
 #logo, #nav_container {width: auto; height: 100%; max-height: 100%;}
 #logo {align-self: flex-start; margin-left: 2%;}
-#nav_container {align-self: flex-end;  margin-right: 2%; min-width: 200px;}
+#nav_container {
+	align-self: flex-end;
+	margin-right: 2%;
+	flex-wrap: nowrap;
+	-webkit-flex-wrap: nowrap;
+}
 #logo_img {border-radius: 50%; max-height: 95%;}
 #logo_text {color: white;}
-.nav_btn {
-	width: 150px;
-	min-height: 100%;
-	background-color: rgba(0,0,0,0.5);
-	transition: all 1s;
+button {border: none;}
+button, .nav_btn {
+    /*border: none;*/
+    /*border-color: #992030;*/
+    background-color: #992030;
+    color: white;
 }
-.nav_btn:hover {background-color: rgba(255,122,255,0.5);}
+.nav_btn {
+	background-color: rgba(0,0,0,0);
+    border: none;
+	padding: 8px 16px;
+	text-align: center;
+	margin: auto;
+}
+/*.nav_btn:hover {background-color: rgba(255,122,255,0.5);}*/
 
 /*
 ** MODEL DIALOG
@@ -60,12 +84,12 @@ footer {
 .modal_container {background-color: rgba(0,0,0,0.5);}
 a:hover {cursor: pointer;}
 form {
-	padding: 5%;
+	margin: auto;
 	color: white;
 	border-radius: 6px;
 	border: 1px solid transparent;
 }
-form h1 {text-align: center; margin: 15px 0;}
+form h1 {text-align: center;}
 form a {font-size: small; margin: auto;}
 input {
     width: 60%;
@@ -75,13 +99,13 @@ input {
 	padding: 12px 20px;
 }
 
-input[type=text], input[type=email], select {
+input[type=text], input[type=email], input[type=password], select {
 	border: 1px solid #ccc;
 	box-sizing: border-box;
 	background-color: transparent;
 }
 
-input[type=button] {
+input[type=submit] {
 	background-color: #4CAF50;
 	border: none;
 	cursor: pointer;
@@ -96,7 +120,7 @@ label, .actions {width: 60%;}
 	position: fixed;
 	height: 100%;
 	width: 100%;
-	display: none;
+	/*display: none;*/
 }
 #app_access form {background-color: transparent;}
 #app_access .col {
@@ -131,18 +155,59 @@ label, .actions {width: 60%;}
 /*
 ** MINI PROFILE STYLES
 */
-#profiles {min-height: 100%; height: auto; width: 100%;}
-.card {
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-	transition: 0.3s;
-	margin: 2%;
+.mini_profiles_view {width: 80%;overflow: auto;}
+.mini_profiles_view.card:hover {
+	box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
 }
-.card:hover {box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);}
+.modal {
+	z-index:5;
+	display:none;
+	padding-top:100px;
+	position:fixed;
+	top: 0;
+	left: 0;
+	width:100%;
+	height:100%;
+	background-color:rgba(0,0,0,0.4);
+}
+.card {
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+	transition: 0.3s;
+	margin: 8px;
+    width: 20%;
+    height: auto;
+    background-color: white;
+    color: black;
+    border-radius: 2px;
+}
+.card img {width: 160px; height: 160px;}
+.card p {margin: 8px auto;}
 .container {padding: 2px 16px;}
 
-/*
-** LOADER
-*/
+/* SIGNED-IN USER PROFILE */
+.profile_view {
+    background-color: white;
+    color: black;
+    width: 60%;
+    min-height: 95%;
+    padding: 16px;
+}
+.profile_view .card {
+    width: 100%;
+    height: auto;
+    /*padding: 8px;*/
+}
+.profile_view .col {width: 40%;}
+.profile_view label {width: 30%}
+.profile_view input {border: none; color: black; width: 65%; text-wrap: normal;}
+.profile_view form {color: black;}
+.profile_view fieldset {border: none;}
+.profile_view .profile_gallery {padding: 18px;}
+.profile_gallery img {max-width: 100px; max-height: 100px; margin: 4px;flex: 1;}
+
+	/**
+    ** LOADER
+    */
 #app_loader_cont {
 	position: fixed;
 	width: 100%;
