--- a/includes/userAccess.html
+++ b/includes/userAccess.html
@@ -7,39 +7,63 @@
 @License: maDezynIzM.E. 2016
 -->
 
-<div class="flex_container" id="app_access">
-    <div class="right_col col">
+<div class="flex_container padding_16" id="app_access">
+    <div class="center col padding_16">
         <!-- LOGIN FORM -->
-      <form class="flex_col_container" method="POST" id="sign_in_form" autocomplete="off">
-          <h1>Login</h1>
-          <label for="uname">Username/E-mail:</label>
-          <input type="text" name="uname" id="uname" required autofocus>
-          <label for="password">Password:</label>
-          <input type="text" name="password" id="password" maxlength="10" required>
-          <input type="button" name="submit_login" id="submit_login" value="Sign-in">
-          <div class="flex_container actions">
-              <a id="sign_up_btn" class="other_actions">Sign-up</a>
-              <a class="other_actions">forgot password?</a>
-          </div>
-      </form>
+        <form class="flex_col_container padding_16" method="POST" id="sign_in_form" name="login" autocomplete="off">
+            <h1>Login</h1>
+
+            <br>
+            <label for="uname">Username/E-mail:</label>
+            <input type="text" name="username" id="uname" required autofocus>
+
+            <br>
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password" maxlength="10" required>
+
+            <br>
+            <input type="submit" name="submit_login" id="submit_login" value="Sign-in">
+
+            <br>
+            <div class="flex_container actions">
+                <a id="sign_up_btn" class="other_actions">Sign-up</a>
+                <a class="other_actions">forgot password ?</a>
+            </div>
+        </form>
         <!-- REGISTRATION FORM -->
-        <form class="flex_col_container" method="POST" id="sign_up_form" autocomplete="off">
+        <form class="flex_col_container padding_16" method="POST" id="sign_up_form" name="register" autocomplete="off">
             <h1>Register</h1>
-            <label for="new_uname">Username:</label>
-            <input type="text" name="new_uname" id="new_uname" required autofocus>
+
+            <br>
             <label for="fname">First name:</label>
             <input type="text" name="fname" id="fname" required>
+
+            <br>
             <label for="lname">Last name:</label>
             <input type="text" name="lname" id="lname" required>
+
+            <br>
+            <label for="new_uname">Username:</label>
+            <input type="text" name="username" id="new_uname" required autofocus>
+
+            <br>
             <label for="email">E-mail:</label>
             <input type="email" name="email" id="email" placeholder="example@here.com" required>
+
+            <br>
             <label for="password1">Password:</label>
-            <input type="text" name="password1" id="password1" maxlength="10" required>
+            <input type="password" name="password" id="password1" maxlength="10" required>
+
+            <br>
             <label for="password2">Re-enter password:</label>
-            <input type="text" name="password2" id="password2" maxlength="10" required>
-            <input type="button" name="submit_reg" id="submit_reg" value="Sign-up">
+            <input type="password" name="password2" id="password2" maxlength="10" required>
+
+            <br>
+            <input type="submit" name="submit_reg" id="submit_reg" value="Sign-up">
+
+            <br>
             <div class="flex_container actions">
-                <a id="sign_in_btn" class="other_actions">Sign-in</a>
+                <a id="sign_in_btn" class="other_actions">Already a member</a>
             </div>
         </form>
     </div>
