--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ html {
 .padding_long {padding: 24px 8px;}
 .padding_16 {padding: 16px;}
 .padding_8 {padding: 9px;}
+.margin_16 {margin: 16px;}
+.margin_8 {margin: 8px;}
+.margin_4 {margin: 4px;}
+.margin_0 {margin: 0;}
 .center {margin: auto;}
 .circle {border-radius: 50%;}
 .half_width {flex: 1;}
@@ -159,6 +163,20 @@ label, .actions {width: 60%;}
 .mini_profiles_view.card:hover {
 	box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
 }
+.mini_profiles_view .card {margin: 8px;}
+.card {
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+	transition: 0.3s;
+    /*width: 20%;*/
+    height: auto;
+    background-color: white;
+    color: black;
+    border-radius: 2px;
+}
+.card img {width: 160px; height: 160px;}
+.card p {margin: 8px auto;}
+.container {padding: 2px 16px;}
+
 .modal {
 	z-index:5;
 	display:none;
@@ -170,19 +188,6 @@ label, .actions {width: 60%;}
 	height:100%;
 	background-color:rgba(0,0,0,0.4);
 }
-.card {
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-	transition: 0.3s;
-	margin: 8px;
-    width: 20%;
-    height: auto;
-    background-color: white;
-    color: black;
-    border-radius: 2px;
-}
-.card img {width: 160px; height: 160px;}
-.card p {margin: 8px auto;}
-.container {padding: 2px 16px;}
 
 /* SIGNED-IN USER PROFILE */
 .profile_view {
