--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
-html, body {height: 100%; width: 100%;overflow: hidden;}
+html, body {height: 100%; width: 100%;overflow: hidden; font-size: 14px;}
 html {
     background: url("../imgs/app/bg.jpg") no-repeat center fixed;
     background-size: cover;
 }
 * {margin: auto;}
+.card, .modal {font-family: 'Astloch';font-size: 22px;}
 .theme_button {color: #992030;background: none;border-bottom: 3px solid transparent;}
 .theme_button:hover {cursor: pointer; border-bottom: 3px solid #992030;}
 .padding_long {padding: 24px 8px;}
@@ -16,8 +17,11 @@ html {
 .center {margin: auto;}
 .circle {border-radius: 50%;}
 .half_width {flex: 1;}
+.flex_1 {flex: 1;}
+.flex_2 {flex: 2;}
+.flex_3 {flex: 3;}
 .full_width {width: 100%;}
-header, #main_content, footer {width: 100%;}
+header, #main_content, footer, .modal {width: 100%;}
 header {
 	position: fixed;
 	top: 0;
@@ -27,7 +31,7 @@ header {
 	background-color: rgb(66, 0, 0);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
-#main_content {
+#main_content, .modal {
 	min-height: 93%;
 	overflow: auto;
 	background-color: rgba(0,0,0,0.2);
@@ -40,9 +44,7 @@ footer {
 	background-color: rgba(0,0,0,0.8);
 }
 
-/*
-** GLOBAL STYLES
-*/
+/** GLOBAL STYLES **/
 /*div {margin: 5% auto;}*/
 .flex_container, .flex_col_container {
 	display: flex;
@@ -53,9 +55,7 @@ footer {
 }
 .flex_col_container {flex-direction: column;}
 
-/*
-** NAVIGATION BAR
-*/
+/** NAVIGATION BAR **/
 #logo, #nav_container {width: auto; height: 100%; max-height: 100%;}
 #logo {align-self: flex-start; margin-left: 2%;}
 #nav_container {
@@ -178,17 +178,17 @@ label, .actions {width: 60%;}
 .container {padding: 2px 16px;}
 
 .modal {
-	z-index:5;
-	display:none;
-	padding-top:100px;
-	position:fixed;
+	z-index: 5;
+	display: none;
+	padding-top: 100px;
+	position: fixed;
 	top: 0;
 	left: 0;
-	width:100%;
-	height:100%;
-	background-color:rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.8);
 }
-
+.modal_content {margin: auto; width: 40%;background-color: white; padding: 8px;}
+.modal_content img { width: 100%; height: 300px; max-width: 50%;}
+.modal_content .card {width: auto; max-width: 50%;height: auto;}
 /* SIGNED-IN USER PROFILE */
 .profile_view {
     background-color: white;
