--- a/includes/profile.html
+++ b/includes/profile.html
@@ -12,14 +12,13 @@
         <div class="flex_container padding_long card">
             <img src="imgs/app/avt.svg" alt="#" id="profile_img" class="circle"/>
             <div class="flex_col_container">
-                <h3> sweet-cheeks </h3>
+                <h3 class="profile_username"> sweet-cheeks </h3>
                 <br>
                 <p>Likes: <span class="profile_likes"> 19 </span></p>
                 <p>Matches: <span class="profile_matches"> 9 </span></p>
                 <p>Rating: <span class="profile_rating"> 7/10 </span></p>
             </div>
         </div>
-
         <br>
         <div class="flex_container card profile_gallery" id="conn_img_gallery">
             <!-- some shit -->
@@ -29,14 +28,13 @@
             <img src="imgs/app/avt.svg">
         </div>
     </div>
-
     <div class="flex_col_container col">
         <div class="flex_col_container padding_16 card" id="user_info">
             <fieldset>
                 <legend>User information</legend>
                 <form>
-                    <label for="profile_uname">First-name : </label>
-                    <input class="info_first_name" type="text" value="Sandra" id="profile_uname" disabled>
+                    <label for="profile_fname">First-name : </label>
+                    <input class="info_first_name" type="text" value="Sandra" id="profile_fname" disabled>
                     <br>
                     <label for="profile_lname">Last-name : </label>
                     <input class="info_last_name" type="text" value="Brooks" id="profile_lname" disabled>
@@ -56,10 +54,9 @@
                 </form>
             </fieldset>
         </div>
-
         <br>
         <div class="flex_container padding_16 card" id="stats">
-            <div class="flex_col_container half_width" id="actions">
+            <div class="flex_col_container flex_1" id="actions">
                 <button type="button" name="edit">Edit profile</button>
                 <button type="button" name="settings">Settings</button>
                 <button type="button" name="sign_out_btn" id="sign_out_btn">Sign-out</button>
